--- a/QRbusinesscard.tex
+++ b/QRbusinesscard.tex
@@ -1,22 +1,25 @@
 % !TeX program = xelatex
 
-\documentclass[lang=en,address,textwidth=0.58,qrwidth=0.35,https,fill,iconright,leftalign,hint,icon,textfirst,mecard,uselogo]{./businesscard-qrcode}
+\documentclass[lang=en,address,textwidth=0.58,qrwidth=0.35,https,fill,iconleft,rightalign,hint,icon,qrfirst,mecard,uselogo]{./businesscard-qrcode}
 
 \phone{+49 1577 1848188}
 \type{home}
 \honoricsuffix{Ph.D.}
-\givennames{Mark  Edward}
+\givennames{Mark\ Edward}
 \familynames{Fuller}
 \homepage{mefuller.github.io}
 \github{mefuller}
 \email{mark.e.fuller@gmx.de}
 \matrixorg{@mefuller:matrix.org}
-\street{Robensstr. 57}
+\street{Robensstr.\ 57}
 \city{Aachen}
 \zip{52070}
 \country{Germany}
 \pgpfingerprint{73F1 A30C BDF4 DB4B C75F FD0F D599 E76C FFCA BF60}
-\logo{PCFC.png}
+
+%as a temporary hack, please provide "nothing.png" as the logo if blank space desired
+%\logo{logo/nothing.png}
+\logo{logo/LGPLv3.png} % thank you FSF for all that you do!
 
 \begin{document}
 	\drawcard
