--- a/QRbusinesscard.tex
+++ b/QRbusinesscard.tex
@@ -1,6 +1,6 @@
 % !TeX program = xelatex
 
-\documentclass[lang=en,address,textwidth=0.58,qrwidth=0.35,https,fill,iconleft,rightalign,hint,icon,qrfirst,mecard,uselogo]{./businesscard-qrcode}
+\documentclass[lang=en,address,textwidth=0.58,qrwidth=0.35,https,fill,iconleft,rightalign,hint,icon,qrfirst,mecard,uselogo]{businesscard-qrcode}
 
 \phone{+49 1577 1848188}
 \type{home}
@@ -16,9 +16,6 @@
 \zip{52070}
 \country{Germany}
 \pgpfingerprint{73F1 A30C BDF4 DB4B C75F FD0F D599 E76C FFCA BF60}
-
-%as a temporary hack, please provide "nothing.png" as the logo if blank space desired
-%\logo{logo/nothing.png}
 \logo{logo/LGPLv3.png} % thank you FSF for all that you do!
 
 \begin{document}
