--- a/printpage.tex
+++ b/printpage.tex
@@ -24,5 +24,5 @@
 \usepackage{graphicx}
 
 \begin{document}
-    \genericlabel{\includegraphics[trim = 2mm 2mm 2mm 2mm, clip]{/home/fuller/Workspace/businesscard-qrcode/QRbusinesscard-alt.pdf}}
+    \genericlabel{\includegraphics[trim = 2mm 2mm 2mm 2mm, clip]{QRbusinesscard.pdf}}
 \end{document}
