add better quality logos

--- a/QRbusinesscard.tex
+++ b/QRbusinesscard.tex
@@ -7,16 +7,16 @@
 \honoricsuffix{Ph.D.}
 \givennames{Mark\ Edward}
 \familynames{Fuller}
-\homepage{mefuller.github.io}
+\homepage{stossrohr.net}
 \github{mefuller}
-\email{mark.e.fuller@gmx.de}
+\email{fuller@member.fsf.org}
 \matrixorg{@mefuller:matrix.org}
 \street{Robensstr.\ 57}
 \city{Aachen}
 \zip{52070}
 \country{Germany}
 \pgpfingerprint{73F1 A30C BDF4 DB4B C75F FD0F D599 E76C FFCA BF60}
-\logo{logo/LGPLv3.png} % thank you FSF for all that you do!
+\logo{logo/lgpl-v3.svg.png} % thank you FSF for all that you do!
 
 \begin{document}
 	\drawcard
