--- a/QRbusinesscard.tex
+++ b/QRbusinesscard.tex
@@ -7,7 +7,7 @@
 \honoricsuffix{Ph.D.}
 \givennames{Mark\ Edward}
 \familynames{Fuller}
-\homepage{stossrohr.net}
+\homepage{www.stossrohr.net}
 \github{mefuller}
 \email{fuller@member.fsf.org}
 \matrixorg{@mefuller:matrix.org}
