use email properly associated with PGP in example

--- a/QRbusinesscard.tex
+++ b/QRbusinesscard.tex
@@ -9,7 +9,7 @@
 \familynames{Fuller}
 \homepage{www.stossrohr.net}
 \github{mefuller}
-\email{fuller@member.fsf.org}
+\email{fuller@stossrohr.net}
 \matrixorg{@mefuller:matrix.org}
 \street{Robensstr.\ 57}
 \city{Aachen}
