pro.title and zip/city order toggles

--- a/QRbusinesscard.tex
+++ b/QRbusinesscard.tex
@@ -1,12 +1,13 @@
 % !TeX program = xelatex
 
-\documentclass[lang=en,address,textwidth=0.58,qrwidth=0.35,https,fill,iconleft,rightalign,hint,icon,qrfirst,mecard,uselogo]{businesscard-qrcode}
+\documentclass[lang=en,address,zipfirst,textwidth=0.58,qrwidth=0.35,https,fill,iconleft,rightalign,hint,icon,qrfirst,vcard,uselogo]{businesscard-qrcode}
 
 \phone{+49 1577 1848188}
 \type{home}
 \honoricsuffix{Ph.D.}
 \givennames{Mark\ Edward}
 \familynames{Fuller}
+\ptitle{Artisanal,\ Hand-Crafted\ Shocks}
 \homepage{www.stossrohr.net}
 \github{mefuller}
 \email{fuller@stossrohr.net}
