add overwrite of name and address

--- a/QRbusinesscard.tex
+++ b/QRbusinesscard.tex
@@ -2,20 +2,20 @@
 
 \documentclass[lang=en,address,zipfirst,textwidth=0.58,qrwidth=0.35,https,fill,iconleft,rightalign,hint,icon,qrfirst,vcard,uselogo]{businesscard-qrcode}
 
-\phone{+49 1577 1848188}
-\type{home}
+\phone{+972 (0)53-872-6579}
+\type{work}
 \honoricsuffix{Ph.D.}
-\givennames{Mark\ Edward}
+\givennames{Mark\ E.}
 \familynames{Fuller}
-\ptitle{Artisanal,\ Hand-Crafted\ Shocks}
-\homepage{www.stossrohr.net}
+\ptitle{Faculty\ of\ Chemical\ Engineering}
+\homepage{www.stossrohr.net} % do not include https://
 \github{mefuller}
 \email{fuller@stossrohr.net}
 \matrixorg{@mefuller:matrix.org}
-\street{Robensstr.\ 57}
-\city{Aachen}
-\zip{52070}
-\country{Germany}
+\street{Technion\ I.I.T.} %Faculty of Chemical Engineering - 
+\city{Haifa}
+\zip{3200003}
+\country{Israel}
 \pgpfingerprint{73F1 A30C BDF4 DB4B C75F FD0F D599 E76C FFCA BF60}
 \logo{logo/lgpl-v3.svg.png} % thank you FSF for all that you do!
 
